# extract-xiso-gui

./: .gitignore  CMakeLists.txt  ExtractXISOGUI.m  GITHUB-RELEASE.md  GUI-README.md  HOW-TO-RELEASE.md  Icon-Mac-Default-1024x1024@1x.icns  Info.plist  Makefile  README.md  build-github-release.sh  build-release.sh  extract-xiso.c  launch-extract-xiso.sh  launch-gui.sh  sign.sh
.claude/: settings.local.json
release/: checksums.txt  extract-xiso-2.7.1-gui-macos.dmg
release/extract-xiso-2.7.1-gui-macos/: README-GUI.md  RELEASE-NOTES.md  extract-xiso  install.sh  launch-gui.command
release/extract-xiso-2.7.1-gui-macos/Extract-XISO.app/Contents/MacOS/: Extract-XISO
